fix layout shift

--- a/packages/app/src/layouts/components/sidebar/index.less
+++ b/packages/app/src/layouts/components/sidebar/index.less
@@ -8,10 +8,15 @@
 .app_sidebar_wrapper {
 	position: sticky;
 
-	left: 0;
 	top: 0;
+	left: 0;
 
 	z-index: 1000;
+
+	width: fit-content;
+
+	height: 100vh;
+	height: 100dvh;
 
 	display: flex;
 	flex-direction: column;
@@ -19,11 +24,6 @@
 	align-items: center;
 
 	gap: 10px;
-
-	width: fit-content;
-
-	height: 100vh;
-	height: 100dvh;
 
 	padding: 10px;
 }
@@ -35,6 +35,9 @@
 
 	display: flex;
 	flex-direction: column;
+
+	top: 0;
+	left: 0;
 
 	overflow: hidden;
 
